--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ entrypoints==0.4
 executing==0.8.3
 fastapi==0.78.0
 fonttools==4.33.3
+gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
 ipykernel==6.13.0
